Fix user avatar spacings

--- a/src/modules/home/index.less
+++ b/src/modules/home/index.less
@@ -130,4 +130,8 @@
   .ant-modal-content {
     border-radius: 0;
   }
+
+  .profile-avatar span {
+    display: flex;
+  }
 }
